--- a/data/sample_output/examples/AppLaunchReport_events_pretty.json
+++ b/data/sample_output/examples/AppLaunchReport_events_pretty.json
@@ -1,158 +1,100 @@
 [
     {
-        "channel": "server",
-        "context_library_name": "unknown",
-        "context_library_version": "unknown",
-        "event": "AppLaunchReport",
-        "messageid": "api-2OmfFhypeiI93sz3RpEck4JnOGu",
-        "projectid": "eMPYdT9WHmfYYdwau3p4sx",
-        "properties_appfingerprint": "68CFA9B6D40E0BF02F410A66557A57E4",
-        "properties_appflavor": "studioapp.retail",
-        "properties_appname": "Studio One",
-        "properties_appversion": "6.1.1",
-        "properties_architecture": "x64",
-        "properties_buildnumber": "92984",
-        "properties_lasttimestamp": "1681516800",
-        "properties_launchfrequency": "1.8666522634856213",
-        "properties_platform": "win",
-        "properties_timestamp": "1682170572",
-        "properties_totalsessiontime": "145432",
-        "receivedat": "2023-04-22T13:36:15.177Z",
-        "sentat": "None",
-        "timestamp": "2023-04-22T13:36:15.177Z",
-        "type": "track",
-        "userid": "4pARes",
-        "version": "2",
-        "writekey": "uXTzsfLBicvxkFzW6yYxbATtd8oWDGB8"
+        "appFingerprint": "68CFA9B6D40E0BF02F410A66557A57E4",
+        "appFlavor": "studioapp.retail",
+        "appName": "Studio One",
+        "appVersion": "6.1.1",
+        "architecture": "x64",
+        "buildNumber": 92984,
+        "lastTimestamp": 1682758800,
+        "launchFrequency": 0.11008346722150095,
+        "platform": "win",
+        "timestamp": 1684362398,
+        "totalSessionTime": 3353,
+        "event": "AppLaunchReport"
     },
     {
-        "channel": "server",
-        "context_library_name": "unknown",
-        "context_library_version": "unknown",
-        "event": "AppLaunchReport",
-        "messageid": "api-2OmfFX7XnM66nqSvLr0a1rGhxbQ",
-        "projectid": "eMPYdT9WHmfYYdwau3p4sx",
-        "properties_appfingerprint": "68CFA9B6D40E0BF02F410A66557A57E4",
-        "properties_appflavor": "studioapp.retail",
-        "properties_appname": "Studio One",
-        "properties_appversion": "6.1.1",
-        "properties_architecture": "x64",
-        "properties_buildnumber": "92984",
-        "properties_lasttimestamp": "1681488000",
-        "properties_launchfrequency": "2.364171543161376",
-        "properties_platform": "win",
-        "properties_timestamp": "1682170573",
-        "properties_totalsessiontime": "100717",
-        "receivedat": "2023-04-22T13:36:13.966Z",
-        "sentat": "None",
-        "timestamp": "2023-04-22T13:36:13.966Z",
-        "type": "track",
-        "userid": "5sDEde",
-        "version": "2",
-        "writekey": "uXTzsfLBicvxkFzW6yYxbATtd8oWDGB8"
+        "appFingerprint": "68CFA9B6D40E0BF02F410A66557A57E4",
+        "appFlavor": "studioapp.retail",
+        "appName": "Studio One",
+        "appVersion": "6.1.1",
+        "architecture": "x64",
+        "buildNumber": 92984,
+        "lastTimestamp": 0,
+        "launchFrequency": 1.8974197016248957,
+        "platform": "win",
+        "timestamp": 1684362402,
+        "totalSessionTime": 75238,
+        "event": "AppLaunchReport"
     },
     {
-        "channel": "server",
-        "context_library_name": "unknown",
-        "context_library_version": "unknown",
-        "event": "AppLaunchReport",
-        "messageid": "api-2OmfNjEQYjwjszS8ZCDL2Kz81Bf",
-        "projectid": "eMPYdT9WHmfYYdwau3p4sx",
-        "properties_appfingerprint": "877539B055AFBEC017ADA428CF808A52",
-        "properties_appflavor": "studioapp.retail",
-        "properties_appname": "Studio One",
-        "properties_appversion": "6.1.1",
-        "properties_architecture": "ARM64",
-        "properties_buildnumber": "92984",
-        "properties_lasttimestamp": "1680955200",
-        "properties_launchfrequency": "2.527215967409976",
-        "properties_platform": "mac",
-        "properties_timestamp": "1682170636",
-        "properties_totalsessiontime": "65498",
-        "receivedat": "2023-04-22T13:37:18.264Z",
-        "sentat": "None",
-        "timestamp": "2023-04-22T13:37:18.264Z",
-        "type": "track",
-        "userid": "4pCNen",
-        "version": "2",
-        "writekey": "uXTzsfLBicvxkFzW6yYxbATtd8oWDGB8"
+        "appFingerprint": "68CFA9B6D40E0BF02F410A66557A57E4",
+        "appFlavor": "studioapp.retail",
+        "appName": "Studio One",
+        "appVersion": "6.1.1",
+        "architecture": "x64",
+        "buildNumber": 92984,
+        "lastTimestamp": 0,
+        "launchFrequency": 0.21475015410311984,
+        "platform": "win",
+        "timestamp": 1684362393,
+        "totalSessionTime": 3189,
+        "event": "AppLaunchReport"
     },
     {
-        "channel": "server",
-        "context_library_name": "unknown",
-        "context_library_version": "unknown",
-        "event": "AppLaunchReport",
-        "messageid": "api-2OmfP95gqsWujdimiuezXGbqVh6",
-        "projectid": "eMPYdT9WHmfYYdwau3p4sx",
-        "properties_appfingerprint": "124676502AFA9EB4CB9D70A2D32ED73D",
-        "properties_appflavor": "studioapp.bundle",
-        "properties_appname": "Studio One",
-        "properties_appversion": "6.1.0",
-        "properties_architecture": "x64",
-        "properties_buildnumber": "92811",
-        "properties_lasttimestamp": "1680346800",
-        "properties_launchfrequency": "0.9478957591827402",
-        "properties_platform": "win",
-        "properties_timestamp": "1682170665",
-        "properties_totalsessiontime": "119213",
-        "receivedat": "2023-04-22T13:37:29.689Z",
-        "sentat": "None",
-        "timestamp": "2023-04-22T13:37:29.689Z",
-        "type": "track",
-        "userid": "7pITit",
-        "version": "2",
-        "writekey": "uXTzsfLBicvxkFzW6yYxbATtd8oWDGB8"
+        "appFingerprint": "877539B055AFBEC017ADA428CF808A52",
+        "appFlavor": "studioapp.retail",
+        "appName": "Studio One",
+        "appVersion": "6.1.1",
+        "architecture": "ARM64",
+        "buildNumber": 92984,
+        "lastTimestamp": 0,
+        "launchFrequency": 0.992138264655805,
+        "platform": "mac",
+        "timestamp": 1684362465,
+        "totalSessionTime": 5601,
+        "event": "AppLaunchReport"
     },
     {
-        "channel": "server",
-        "context_library_name": "unknown",
-        "context_library_version": "unknown",
-        "event": "AppLaunchReport",
-        "messageid": "api-2OmfWyj7oYckd3tBxEatLpZ3DY0",
-        "projectid": "eMPYdT9WHmfYYdwau3p4sx",
-        "properties_appfingerprint": "124676502AFA9EB4CB9D70A2D32ED73D",
-        "properties_appflavor": "studioapp.retail",
-        "properties_appname": "Studio One",
-        "properties_appversion": "6.1.0",
-        "properties_architecture": "x64",
-        "properties_buildnumber": "92811",
-        "properties_lasttimestamp": "1681491600",
-        "properties_launchfrequency": "1.676165234792964",
-        "properties_platform": "win",
-        "properties_timestamp": "1682170803",
-        "properties_totalsessiontime": "19270",
-        "receivedat": "2023-04-22T13:38:33.310Z",
-        "sentat": "None",
-        "timestamp": "2023-04-22T13:38:33.310Z",
-        "type": "track",
-        "userid": "7pSEen",
-        "version": "2",
-        "writekey": "uXTzsfLBicvxkFzW6yYxbATtd8oWDGB8"
+        "appFingerprint": "68CFA9B6D40E0BF02F410A66557A57E4",
+        "appFlavor": "studioapp.retail",
+        "appName": "Studio One",
+        "appVersion": "6.1.1",
+        "architecture": "x64",
+        "buildNumber": 92984,
+        "lastTimestamp": 0,
+        "launchFrequency": 0.21388538647901087,
+        "platform": "win",
+        "timestamp": 1684362499,
+        "totalSessionTime": 4261,
+        "event": "AppLaunchReport"
     },
     {
-        "channel": "server",
-        "context_library_name": "unknown",
-        "context_library_version": "unknown",
-        "event": "AppLaunchReport",
-        "messageid": "api-2OmfeeKdoL8uHsLeglRPW91fKCb",
-        "projectid": "eMPYdT9WHmfYYdwau3p4sx",
-        "properties_appfingerprint": "68CFA9B6D40E0BF02F410A66557A57E4",
-        "properties_appflavor": "studioapp.free",
-        "properties_appname": "Studio One",
-        "properties_appversion": "6.1.1",
-        "properties_architecture": "x64",
-        "properties_buildnumber": "92984",
-        "properties_lasttimestamp": "1681552800",
-        "properties_launchfrequency": "0",
-        "properties_platform": "win",
-        "properties_timestamp": "1682170773",
-        "properties_totalsessiontime": "1635",
-        "receivedat": "2023-04-22T13:39:34.011Z",
-        "sentat": "None",
-        "timestamp": "2023-04-22T13:39:34.011Z",
-        "type": "track",
-        "userid": "7pKRko",
-        "version": "2",
-        "writekey": "uXTzsfLBicvxkFzW6yYxbATtd8oWDGB8"
+        "appFingerprint": "68CFA9B6D40E0BF02F410A66557A57E4",
+        "appFlavor": "studioapp.retail",
+        "appName": "Studio One",
+        "appVersion": "6.1.1",
+        "architecture": "x64",
+        "buildNumber": 92984,
+        "lastTimestamp": 1683223200,
+        "launchFrequency": 0,
+        "platform": "win",
+        "timestamp": 1684362592,
+        "totalSessionTime": 2044,
+        "event": "AppLaunchReport"
+    },
+    {
+        "appFingerprint": "877539B055AFBEC017ADA428CF808A52",
+        "appFlavor": "studioapp.retail",
+        "appName": "Studio One",
+        "appVersion": "6.1.1",
+        "architecture": "x64",
+        "buildNumber": 92984,
+        "lastTimestamp": 0,
+        "launchFrequency": 4.171528353356777,
+        "platform": "mac",
+        "timestamp": 1684362650,
+        "totalSessionTime": 37674,
+        "event": "AppLaunchReport"
     }
 ]
