--- a/data/sample_output/schemas/AppLaunchReport.json
+++ b/data/sample_output/schemas/AppLaunchReport.json
@@ -2,103 +2,211 @@
     "$schema": "http://json-schema.org/schema#",
     "type": "object",
     "properties": {
-        "channel": {
-            "type": "string"
+        "appFingerprint": {
+            "type": "string",
+            "examples": [
+                "68CFA9B6D40E0BF02F410A66557A57E4",
+                "68CFA9B6D40E0BF02F410A66557A57E4",
+                "68CFA9B6D40E0BF02F410A66557A57E4",
+                "877539B055AFBEC017ADA428CF808A52",
+                "68CFA9B6D40E0BF02F410A66557A57E4",
+                "68CFA9B6D40E0BF02F410A66557A57E4",
+                "877539B055AFBEC017ADA428CF808A52"
+            ],
+            "matched_records": 7,
+            "pct_of_records_matched": 100.0,
+            "non_empty": 7,
+            "non_empty_percent": 100.0
         },
-        "context_library_name": {
-            "type": "string"
+        "appFlavor": {
+            "type": "string",
+            "examples": [
+                "studioapp.retail",
+                "studioapp.retail",
+                "studioapp.retail",
+                "studioapp.retail",
+                "studioapp.retail",
+                "studioapp.retail",
+                "studioapp.retail"
+            ],
+            "matched_records": 7,
+            "pct_of_records_matched": 100.0,
+            "non_empty": 7,
+            "non_empty_percent": 100.0
         },
-        "context_library_version": {
-            "type": "string"
+        "appName": {
+            "type": "string",
+            "examples": [
+                "Studio One",
+                "Studio One",
+                "Studio One",
+                "Studio One",
+                "Studio One",
+                "Studio One",
+                "Studio One"
+            ],
+            "matched_records": 7,
+            "pct_of_records_matched": 100.0,
+            "non_empty": 7,
+            "non_empty_percent": 100.0
         },
-        "event": {
-            "type": "string"
+        "appVersion": {
+            "type": "string",
+            "examples": [
+                "6.1.1",
+                "6.1.1",
+                "6.1.1",
+                "6.1.1",
+                "6.1.1",
+                "6.1.1",
+                "6.1.1"
+            ],
+            "matched_records": 7,
+            "pct_of_records_matched": 100.0,
+            "non_empty": 7,
+            "non_empty_percent": 100.0
         },
-        "messageid": {
-            "type": "string"
+        "architecture": {
+            "type": "string",
+            "examples": [
+                "x64",
+                "x64",
+                "x64",
+                "ARM64",
+                "x64",
+                "x64",
+                "x64"
+            ],
+            "matched_records": 7,
+            "pct_of_records_matched": 100.0,
+            "non_empty": 7,
+            "non_empty_percent": 100.0
         },
-        "projectid": {
-            "type": "string"
+        "buildNumber": {
+            "type": "integer",
+            "examples": [
+                92984,
+                92984,
+                92984,
+                92984,
+                92984,
+                92984,
+                92984
+            ],
+            "matched_records": 7,
+            "pct_of_records_matched": 100.0,
+            "non_empty": 7,
+            "non_empty_percent": 100.0
         },
-        "properties_appfingerprint": {
-            "type": "string"
+        "lastTimestamp": {
+            "type": "integer",
+            "examples": [
+                1682758800,
+                0,
+                0,
+                0,
+                0,
+                1683223200,
+                0
+            ],
+            "matched_records": 7,
+            "pct_of_records_matched": 100.0,
+            "non_empty": 7,
+            "non_empty_percent": 100.0
         },
-        "properties_appflavor": {
-            "type": "string"
+        "launchFrequency": {
+            "type": "number",
+            "examples": [
+                0.11008346722150095,
+                1.8974197016248957,
+                0.21475015410311984,
+                0.992138264655805,
+                0.21388538647901087,
+                0,
+                4.171528353356777
+            ],
+            "matched_records": 7,
+            "pct_of_records_matched": 100.0,
+            "non_empty": 7,
+            "non_empty_percent": 100.0
         },
-        "properties_appname": {
-            "type": "string"
-        },
-        "properties_appversion": {
-            "type": "string"
-        },
-        "properties_architecture": {
-            "type": "string"
-        },
-        "properties_buildnumber": {
-            "type": "string"
-        },
-        "properties_lasttimestamp": {
-            "type": "string"
-        },
-        "properties_launchfrequency": {
-            "type": "string"
-        },
-        "properties_platform": {
-            "type": "string"
-        },
-        "properties_timestamp": {
-            "type": "string"
-        },
-        "properties_totalsessiontime": {
-            "type": "string"
-        },
-        "receivedat": {
-            "type": "string"
-        },
-        "sentat": {
-            "type": "string"
+        "platform": {
+            "type": "string",
+            "examples": [
+                "win",
+                "win",
+                "win",
+                "mac",
+                "win",
+                "win",
+                "mac"
+            ],
+            "matched_records": 7,
+            "pct_of_records_matched": 100.0,
+            "non_empty": 7,
+            "non_empty_percent": 100.0
         },
         "timestamp": {
-            "type": "string"
+            "type": "integer",
+            "examples": [
+                1684362398,
+                1684362402,
+                1684362393,
+                1684362465,
+                1684362499,
+                1684362592,
+                1684362650
+            ],
+            "matched_records": 7,
+            "pct_of_records_matched": 100.0,
+            "non_empty": 7,
+            "non_empty_percent": 100.0
         },
-        "type": {
-            "type": "string"
+        "totalSessionTime": {
+            "type": "integer",
+            "examples": [
+                3353,
+                75238,
+                3189,
+                5601,
+                4261,
+                2044,
+                37674
+            ],
+            "matched_records": 7,
+            "pct_of_records_matched": 100.0,
+            "non_empty": 7,
+            "non_empty_percent": 100.0
         },
-        "userid": {
-            "type": "string"
-        },
-        "version": {
-            "type": "string"
-        },
-        "writekey": {
-            "type": "string"
+        "event": {
+            "type": "string",
+            "examples": [
+                "AppLaunchReport",
+                "AppLaunchReport",
+                "AppLaunchReport",
+                "AppLaunchReport",
+                "AppLaunchReport",
+                "AppLaunchReport",
+                "AppLaunchReport"
+            ],
+            "matched_records": 7,
+            "pct_of_records_matched": 100.0,
+            "non_empty": 7,
+            "non_empty_percent": 100.0
         }
     },
     "required": [
-        "channel",
-        "context_library_name",
-        "context_library_version",
+        "appFingerprint",
+        "appFlavor",
+        "appName",
+        "appVersion",
+        "architecture",
+        "buildNumber",
         "event",
-        "messageid",
-        "projectid",
-        "properties_appfingerprint",
-        "properties_appflavor",
-        "properties_appname",
-        "properties_appversion",
-        "properties_architecture",
-        "properties_buildnumber",
-        "properties_lasttimestamp",
-        "properties_launchfrequency",
-        "properties_platform",
-        "properties_timestamp",
-        "properties_totalsessiontime",
-        "receivedat",
-        "sentat",
+        "lastTimestamp",
+        "launchFrequency",
+        "platform",
         "timestamp",
-        "type",
-        "userid",
-        "version",
-        "writekey"
+        "totalSessionTime"
     ]
 }
